welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: reassignment to val
if ( a=b && b=c) return 20; else{
      ^greenTicket:3: error: reassignment to val
	if(a=b || b=c || a=c) return 10;
            ^